--- a/views/index.ejs
+++ b/views/index.ejs
@@ -184,10 +184,10 @@
                     <!-- IMAGE -->
                     <a href="/schedule/detail/<%=details[i].id%>">
                         <figure class="margin-bottom-10">
-                            <%if(details[i].pictureName != null){%>
-                            <img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt="Not Found Image">
+                            <%if(details[i].pictureName[0] != ''){%>
+                            <img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt="<%=details[i].pictureName[0]%>">
                             <% } else { %>
-                            <img class="img-responsive" src="/assets/images/demo/content_slider/3-min.jpg" alt="Sample Image">
+                            <img class="img-responsive" src="/images/noimage.jpg" alt="">
                             <% } %>
                         </figure>
                     </a>
