--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -133,7 +133,11 @@
                 <!-- POST ITEM -->
                 <div class="blog-post-item">
                     <figure class="margin-bottom-20">
+                        <%if(scheduleList[i].imageUrl != ''){%>
                         <img class="img-responsive" src="/uploads/<%=scheduleList[i].imageUrl%>" alt="">
+                        <%} else {%>
+                        <img class="img-responsive" src="/images/noimage.jpg" alt="">
+                        <% } %>
                     </figure>
 
                     <h2><a href="/schedule/list_detail/<%=scheduleList[i].id%>"><%=scheduleList[i].title%></a></h2>
