--- a/views/TopNav.ejs
+++ b/views/TopNav.ejs
@@ -52,11 +52,11 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="divider"></li>
-                            <li><a href="/timeline">TIME LINE - Date</a></li>
+                            <li><a href="/timeline"><i class="et-calendar"></i> 타임 라인 - 날짜 순</a></li>
                             <li class="divider"></li>
-                            <li><a href="/timeline/recommend">TIME LINE - Recommend</a></li>
+                            <li><a href="/timeline/recommend"><i class="et-heart"></i> 타임 라인 - 추천 순</a></li>
                             <li class="divider"></li>
-                            <li><a href="/timeline/comments">TIME LINE - Comments</a></li>
+                            <li><a href="/timeline/comments"><i class="et-chat"></i> 타임 라인 - 댓글 순</a></li>
                             <li class="divider"></li>
                         </ul>
                     </li>
@@ -67,9 +67,6 @@
                         <ul class="dropdown-menu">
                             <li><a href="/schedule/list"><i class="et-grid"></i> 일정 목록</a></li>
                             <li><a href="/schedule/register"><i class="et-expand"></i> 일정 등록</a></li>
-                            <li><a href="feature-essentials.html"><i class="et-heart"></i> ESSENTIALS</a></li>
-                            <li><a target="_blank" href="../Admin/HTML/"><span class="label label-success pull-right">BONUS</span><i
-                                            class="et-gears"></i> ADMIN PANEL</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><!-- BLOG -->
