--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -100,11 +100,10 @@
 										<!-- IMAGE -->
 										<figure class="margin-bottom-20">
 											<a href="/schedule/detail/<%=detail_id[i-1]%>">
-											<%if(detail_pic[i-1] != null){%>
+											<%if(detail_pic[i-1] != ''){%>
 												<img class="img-responsive" src="/uploads/detail/<%=detail_pic[i-1][0]%>" alt="Not Found">
 											<%}else{%>
-												<img class="img-responsive" src="/assets/images/demo/content_slider/3-min.jpg" alt="Sample Image">
-												(Sample Image)
+												<img class="img-responsive" src="/images/noimage.jpg" alt="No Image">
 											<%}%>
 											</a>
 										</figure>
