--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -30,8 +30,7 @@
     <link href="/assets/css/header-1.css" rel="stylesheet" type="text/css" />
     <link href="/assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
 </head>
-
-<!--
+<!--<%- include chat.ejs%>
     AVAILABLE BODY CLASSES:
 
     smoothscroll 			= create a browser smooth scroll
