--- a/views/index.ejs
+++ b/views/index.ejs
@@ -185,9 +185,9 @@
                     <a href="/schedule/detail/<%=details[i].id%>">
                         <figure class="margin-bottom-10">
                             <%if(details[i].pictureName[0] != ''){%>
-                            <img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt="<%=details[i].pictureName[0]%>">
+                            <img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt="<%=details[i].pictureName[0]%>" style="height:250px; weight:500px;">
                             <% } else { %>
-                            <img class="img-responsive" src="/images/noimage.jpg" alt="">
+                            <img class="img-responsive" src="/images/noimage.jpg" alt=""  style="height:250px; weight:500px;">
                             <% } %>
                         </figure>
                     </a>
