--- a/views/schedule_list.ejs
+++ b/views/schedule_list.ejs
@@ -48,9 +48,9 @@
                 <div class="blog-post-item">
                     <figure class="margin-bottom-20">
                         <%if(scheduleList[i].imageUrl != '') {%>
-                        <img class="img-responsive" src="/uploads/<%=scheduleList[i].imageUrl%>" alt="<%=scheduleList[i].imageUrl%>">
+                        <img class="img-responsive" src="/uploads/<%=scheduleList[i].imageUrl%>" alt="<%=scheduleList[i].imageUrl%>" style="height:250px;weight:500px;">
                         <%} else {%>
-                        <img class="img-responsive" src="/images/noimage.jpg" alt="No Image">
+                        <img class="img-responsive" src="/images/noimage.jpg" alt="No Image"  style="height:250px;weight:500px;">
                         <% } %>
                     </figure>
 
