--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -101,7 +101,7 @@
 										<figure class="margin-bottom-20">
 											<a href="/schedule/detail/<%=detail_id[i-1]%>">
 											<%if(detail_pic[i-1] != ''){%>
-												<img class="img-responsive" src="/uploads/detail/<%=detail_pic[i-1][0]%>" alt="Not Found">
+												<img class="img-responsive" src="/uploads/detail/<%=detail_pic[i-1][0]%>" alt="Not Found"  style="height:400px;weight:900px;">
 											<%}else{%>
 												<img class="img-responsive" src="/images/noimage.jpg" alt="No Image">
 											<%}%>
