--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -106,9 +106,9 @@
 									<a href="/schedule/detail/<%=details[i].id%>">
 									<figure class="margin-bottom-10">
 										<%if(details[i].pictureName != ''){%>
-										<img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt=" <%=details[i].pictureName[0]%> Not Found Image">
+										<img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt=" <%=details[i].pictureName[0]%> Not Found Image"  style="height:400px;weight:900px;">
 										<% } else { %>
-										<img class="img-responsive" src="/images/noimage.jpg" alt="No Image">
+										<img class="img-responsive" src="/images/noimage.jpg" alt="No Image"  style="height:400px;weight:900px;">
 										<% } %>
 									</figure>
 									</a>
