--- a/views/schedule_register.ejs
+++ b/views/schedule_register.ejs
@@ -73,6 +73,7 @@
                                             <option value="">--- Select ---</option>
                                             <option value="경기">경기</option>
                                             <option value="서울">서울</option>
+                                            <option value="서울">강원</option>
                                             <option value="충북">충북</option>
                                             <option value="충남">충남</option>
                                             <option value="경북">경북</option>
