--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -30,6 +30,7 @@
     <link href="/assets/css/header-1.css" rel="stylesheet" type="text/css" />
     <link href="/assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
     <link href="/stylesheets/chat.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/heart.css" rel="stylesheet" type="text/css"/>
     <link href="/assets/plugins/styleswitcher/styleswitcher.css" rel="stylesheet" type="text/css" />
 
 </head>
