--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -94,6 +94,7 @@
 
                 <!-- POST ITEM -->
                 <div class="blog-post-item">
+                    <a href="/schedule/list_detail/<%=scheduleList[i].id%>">
                     <figure class="margin-bottom-20">
                         <%if(scheduleList[i].imageUrl != ''){%>
                         <img class="img-responsive" src="/uploads/<%=scheduleList[i].imageUrl%>" alt=""  style="height:250px;weight:500px;">
@@ -101,6 +102,7 @@
                         <img class="img-responsive" src="/images/noimage.jpg" alt=""  style="height:250px;weight:500px;">
                         <% } %>
                     </figure>
+                    </a>
 
                     <h2><a href="/schedule/list_detail/<%=scheduleList[i].id%>"><%=scheduleList[i].title%></a></h2>
 
