--- a/views/index.ejs
+++ b/views/index.ejs
@@ -187,9 +187,9 @@
                     <a href="/schedule/detail/<%=details[i].id%>">
                         <figure class="margin-bottom-10">
                             <%if(details[i].pictureName[0] != ''){%>
-                            <img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt="<%=details[i].pictureName[0]%>">
+                            <img class="img-responsive" src="/uploads/detail/<%=details[i].pictureName[0]%>" alt="<%=details[i].pictureName[0]%>" style="height:250px;weight:500px;">
                             <% } else { %>
-                            <img class="img-responsive" src="/images/noimage.jpg" alt="">
+                            <img class="img-responsive" src="/images/noimage.jpg" alt=""  style="height:250px;weight:500px;">
                             <% } %>
                         </figure>
                     </a>
@@ -197,8 +197,8 @@
                     <ul class="blog-post-info list-inline">
                         <li>
                             <a href="#">
-                                <i class="fa fa-comment-o"></i>
-                                <span class="font-lato"><%=details[i].commentID.length%></span>
+                                <i class="fa fa-heart-o"></i>
+                                <span class="font-lato"><%=details[i].recommendID.length%></span>
                             </a>
                         </li>
                         <li>
